--- a/partials/header.html
+++ b/partials/header.html
@@ -27,7 +27,7 @@
 </div>
 <div class="container-fluid d-flex flex-column justify-content-between secondary-bg-color align-items-center p-2">
     <div class="container d-flex justify-content-center align-items-center">
-        <a href="../index.html"><img src="../images/Logo.png" alt="GameOn" class="img-fluid"></a>
+        <a href="index.html"><img src="images/Logo.png" alt="GameOn" class="img-fluid"></a>
     </div>
     <div class="navbar navbar-expand-lg">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 header-nav">
