--- a/partials/header.html
+++ b/partials/header.html
@@ -9,11 +9,11 @@
             <a class="text-black text-decoration-none" href="tel: 0997896854">099 789 6854</a>
         </div>
     </div>
-    <div class="d-flex flex-wrap socials justify-content-center align-items-center">
-        <a class="text-black text-decoration-none mx-1" href="#"><i class="bi bi-facebook fs-5"></i></a>
-        <a class="text-black text-decoration-none mx-1" href="#"><i class="bi bi-instagram fs-5"></i></a>
-        <a class="text-black text-decoration-none mx-1" href="#"><i class="bi bi-twitter fs-5"></i></a>
-        <a class="text-black text-decoration-none mx-1" href="#"><i class="bi bi-youtube fs-5"></i></a>
+    <div class="d-flex flex-wrap socials justify-content-center align-items-center fs-5">
+        <a class="text-black text-decoration-none mx-1" href="#"><i class="bi bi-facebook"></i></a>
+        <a class="text-black text-decoration-none mx-1" href="#"><i class="bi bi-instagram"></i></a>
+        <a class="text-black text-decoration-none mx-1" href="#"><i class="bi bi-twitter"></i></a>
+        <a class="text-black text-decoration-none mx-1" href="#"><i class="bi bi-youtube"></i></a>
     </div>
     <div class="d-flex flex-row justify-content-center align-items-center">
         <div class="search d-flex flex-row input-group me-3">
@@ -31,11 +31,11 @@
     </div>
     <div class="navbar navbar-expand-lg">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 header-nav">
-            <li class="nav-item"><a class="nav-link active p-3 m-0" href="../index.html">Naslovna</a></li>
-            <li class="nav-item"><a class="nav-link p-3 m-0" href="../products.html">Proizvodi</a></li>
-            <li class="nav-item"><a class="nav-link p-3 m-0" href="../about.html">O nama</a></li>
-            <li class="nav-item"><a class="nav-link p-3 m-0" href="../blog.html">Blog</a></li>
-            <li class="nav-item"><a class="nav-link p-3 m-0" href="../contact.html">Kontakt</a></li>
+            <li class="nav-item"><a class="nav-link p-3 m-0" id="index" href="../index.html">Naslovna</a></li>
+            <li class="nav-item"><a class="nav-link p-3 m-0" id="products" href="../products.html">Proizvodi</a></li>
+            <li class="nav-item"><a class="nav-link p-3 m-0" id="about" href="../about.html">O nama</a></li>
+            <li class="nav-item"><a class="nav-link p-3 m-0" id="blog" href="../blog.html">Blog</a></li>
+            <li class="nav-item"><a class="nav-link p-3 m-0" id="contact" href="../contact.html">Kontakt</a></li>
         </ul>
     </div>
 </div>
