--- a/partials/header.html
+++ b/partials/header.html
@@ -31,11 +31,11 @@
     </div>
     <div class="navbar navbar-expand-lg">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 header-nav">
-            <li class="nav-item"><a class="nav-link p-3 m-0" id="index" href="../index.html">Naslovna</a></li>
-            <li class="nav-item"><a class="nav-link p-3 m-0" id="products" href="../products.html">Proizvodi</a></li>
-            <li class="nav-item"><a class="nav-link p-3 m-0" id="about" href="../about.html">O nama</a></li>
-            <li class="nav-item"><a class="nav-link p-3 m-0" id="blog" href="../blog.html">Blog</a></li>
-            <li class="nav-item"><a class="nav-link p-3 m-0" id="contact" href="../contact.html">Kontakt</a></li>
+            <li class="nav-item"><a class="nav-link p-3 m-0" id="index" href="index.html">Naslovna</a></li>
+            <li class="nav-item"><a class="nav-link p-3 m-0" id="products" href="products.html">Proizvodi</a></li>
+            <li class="nav-item"><a class="nav-link p-3 m-0" id="about" href="about.html">O nama</a></li>
+            <li class="nav-item"><a class="nav-link p-3 m-0" id="blog" href="blog.html">Blog</a></li>
+            <li class="nav-item"><a class="nav-link p-3 m-0" id="contact" href="contact.html">Kontakt</a></li>
         </ul>
     </div>
 </div>
