--- a/partials/header.html
+++ b/partials/header.html
@@ -1,26 +1,26 @@
 <div class="container-fluid d-flex flex-row justify-content-between main-bg-color align-items-center p-2">
     <div class="d-flex flex-row justify-content-center align-items-center">
         <div class="email-header d-flex flex-row justify-content-center align-items-center ms-3 me-0">
-            <i class="bi bi-envelope-at-fill me-1"></i>
-            <a class="text-black text-decoration-none" href="mailto: info@gameon.hr">info@gameon.hr</a>
+            <i class="bi bi-envelope-at-fill secondary-text-color me-1"></i>
+            <a class="secondary-text-color text-decoration-none" href="mailto: info@gameon.hr">info@gameon.hr</a>
         </div>
-        <div class="telefon-header d-flex flex-row justify-content-center align-items-center mx-3">
+        <div class="telefon-header d-flex flex-row justify-content-center align-items-center mx-3 secondary-text-color">
             <i class="bi bi-telephone-fill me-1"></i>
-            <a class="text-black text-decoration-none" href="tel: 0997896854">099 789 6854</a>
+            <a class="text-decoration-none text-reset" href="tel: 0997896854">099 789 6854</a>
         </div>
     </div>
-    <div class="d-flex flex-wrap socials justify-content-center align-items-center fs-5">
-        <a class="text-black text-decoration-none mx-1" href="#"><i class="bi bi-facebook"></i></a>
-        <a class="text-black text-decoration-none mx-1" href="#"><i class="bi bi-instagram"></i></a>
-        <a class="text-black text-decoration-none mx-1" href="#"><i class="bi bi-twitter"></i></a>
-        <a class="text-black text-decoration-none mx-1" href="#"><i class="bi bi-youtube"></i></a>
+    <div class="d-flex flex-wrap socials justify-content-center align-items-center secondary-text-color fs-5">
+        <a class="text-decoration-none text-reset mx-1" href="#"><i class="bi bi-facebook"></i></a>
+        <a class="text-decoration-none text-reset mx-1" href="#"><i class="bi bi-instagram"></i></a>
+        <a class="text-decoration-none text-reset mx-1" href="#"><i class="bi bi-twitter"></i></a>
+        <a class="text-decoration-none text-reset mx-1" href="#"><i class="bi bi-youtube"></i></a>
     </div>
     <div class="d-flex flex-row justify-content-center align-items-center">
         <div class="search d-flex flex-row input-group me-3">
             <input type="text" placeholder="Pretraži..." name="searchInput" class="form-control">
             <button type="submit" class="secondary-bg-color btn"><i class="bi bi-search text-white"></i></button>
         </div>
-        <div class="me-3 scart">
+        <div class="me-3 scart secondary-text-color">
             <i class="bi bi-cart-fill fs-5"></i>
         </div>
     </div>
